<resources>
    <string name="app_name">Notes and Things</string>
    
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_class_list">ClassList</string>
    <string name="title_activity_create_class">CreateClass</string>
    <string name="title_activity_search_classes">SearchClasses</string>
    <string name="title_activity_notes_list">NotesList</string>
    <string name="title_activity_add_new_note">AddNewNote</string>
    <string name="title_activity_register_account">RegisterAccount</string>

    <!-- Strings related to class list -->
    <string name="search_class_button">Search For Class</string>
    <string name="create_class_button">Create New Class</string>

    <!-- String related to Search Class -->
    <string name="search_button">Search</string>
    <string name="search_textbox">Search For Classes</string>

    <!-- String related to Create Class -->
    <string name="course_name_text">Course Name</string>
    <string name="course_name_box">Mobile Programming</string>
    <string name="course_number_text">Course Number</string>
    <string name="course_number_box">CSCE 4623</string>
    <string name="course_semester_text">Course Semester</string>
    <string name="course_semester_box">Fall, Winter, Spring, or Summer</string>
    <string name="course_instructor_text">Course Instructor</string>
    <string name="course_instructor_box">Dr. Tingxin Yan</string>
    <string name="course_year_text">Course Year</string>
    <string name="course_year_box">2016</string>
    <string name="submit_course_button">Sumbit Course</string>
    <string name="title_activity_testzone">testzone</string>
    <string name="register">Register</string>
    <string name="title_activity_login">Notes&amp;Things</string>
    <string name="username_text">Username</string>
    <string name="username_box">JohnnyDoeBoy</string>
    <string name="password_text">Password</string>
    <string name="password_box">abcd1234</string>
    <string name="firstname_text">Firstname</string>
    <string name="firstname_box">John</string>
    <string name="lastname_text">Lastname</string>
    <string name="lastname_box">Doe</string>
    <string name="university_text">University</string>
    <string name="university_box">U of A</string>
    <string name="submit_user_button">Sign Up</string>
    <string name="title_activity_show_image">showImage</string>
    <string name="remove_btn_text">Remove Classes</string>

</resources>
